web/src/main/webapp/designer/css/designer.css
.z {
  z-index: 1;
}

.row {
  margin-left: 0;
  margin-right: 0.8em;
}

.col-md-12, .col-md-3 {
  padding-left: 0px;
  padding-right: 0px;
}

body {
  overflow: hidden;
}

body .container {
  top: 0;
  left: 0;
  width: 69.5%;
  bottom: 15%;
  position: fixed;
  margin-top: 1em;
  overflow-y: hidden;
  padding-right: 1px;
}

body .panel {
  text-align: center;
	min-height: 167.5px;
	margin-right: 0.2em;
}

.target {
  border-right: none;
}

.targettable {
  z-index: 0;
  margin-top: -18px;
}

.bordered {
  border: none !important;
  background-color: #fff !important;
}

.dotted-border {
  margin-top: 3em;
  min-height: 43px;
  margin-right: 2px;
  border: 2px dotted;
  border-radius: 5px;
  display: inline-block;
  border-color: #357EBD;
  padding: 10px 5px 5px 5px;
  background-color: #F5F5EF; 
}

.dotted-border-lg {
  margin-top: 1em;
  padding-top: 1em;
  border: 2px dotted #357EBD;
  border-radius: 5px 5px 5px 5px;
}

.data {
  top:6.4em;
  right: 0;    
  height: 79.2%;
  margin-top: 1em;
  margin-right: 1em;
  width: 30.5% !important;
  position: fixed !important;
}

.data > .panel {
  width: 100%;
  min-height: 100% !important;
  border-radius: 4px 4px 0px 0px;
  border-bottom: none !important;
}

.trash {
  margin-top: 3em;
  margin-right: 1em;
  padding-right: .3em;
}

.space-right-m {
  margin-right: 1em;
}

.space-left-m {
  margin-left: 1em;
}

.space-top-sm {
  padding-top: 2.5em;
}

.space-top-m {
  margin-top: 1em;
}

.space-bottom {
  margin-bottom: 1em;
}

.space-left-neg {
  margin-left: -1em;
}

.nowrap {
  white-space: nowrap;
}

span {
  white-space: nowrap;
  color: #357EBD !important;
}

textarea {
  margin-top: 0.5em; 
  width: 83% !important;
}

#toField {
  margin-top: 15px;
  width: 83% !important;
}

.pont {
  cursor: default !important;
}

.nav-cont {
	padding-left: 8em;
	padding-right: 8em;
}

.nav-justified {
  margin-top: 0.5em !important;
  margin-bottom: 1em !important;
}

.nav-justified li {
	float: none;
  width: 201px;
	padding-left: .5em;
	padding-right: .5em;
}

.nav-justified li > a {
  width:180px;
  height: 49px;
  line-height:30px;
  margin-bottom:0.5em !important;
  background-color:#428BCA !important;
}

.login-modal {
  left: 0 !important;
  right: 0 !important;
  width: 99% !important;
  display: block !important;
  position: fixed !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

.bootbox {
  left: 0 !important;
  right: 0 !important;
  width: 99% !important;
  display: block !important;
  position: fixed !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

.breadcrumb {
  margin-top: 2em !important;
}

.table {
  border-top: 0px;
  margin-bottom: 0px;
}

.table th, .table td { 
  border-top: none;
 }

.form-grp {
  margin-bottom: 4em;
}

#variables {
  overflow: hidden;
  padding-top: 4em !important;
}

.group {
  color: #009933;
  background-color: #F5F5EF;
}

.eval {
  color: #FFA319;
  background-color: #F5F5EF; 
}

.comp {
  color: #1919FF;
  background-color: #F5F5EF; 
}

td {
  cursor: hand;
  cursor: pointer; 
}

.init {
  font-style: italic;
}

.tops {
  margin-top: 10%;
}

.modal-content {
  width: 70%;
}

.bs-callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
}

.bs-callout h4 {
  margin-top: 0;
}

.bs-callout p:last-child {
  margin-bottom: 0;
}

.bs-callout code,
.bs-callout .highlight {
  background-color: #fff;
}
 
/* Themes for different contexts */
.bs-callout-danger {
  background-color: #fcf2f2;
  border-color: #dFb5b4;
}

.bs-callout-warning {
  background-color: #fefbed;
  border-color: #f1e7bc;
}

.bs-callout-info {
  background-color: #f0f7fd;
  border-color: #d0e3f0;
}

.bs-callout-danger h4 {
  color: #B94A48;
}

.bs-callout-info h4 {
  color: #3A87AD;
}

.green {
  color: #009933 !important; 
}

.nav-justified li > a.btn-warning {
  background-color: #f0ad4e !important;
}

.img {
  right: 0;
  position: fixed !important;
}

body .modal-dialog {
  width: 650px;
}

.spinner {
  top:0;
  left:0;
  width:100%;
  height:100%;
  opacity: .9;
  z-index:1000;
  position:absolute;
  background-color:transparent; 
}

.spinner * {
  left: 35%;
  top: 45%;
  display: block;    
  margin-top: -20px;
  margin-left: -45px;
  position: absolute;
}

.selected {
  font-weight: bold;
}

.lbl {
  margin-top: .5em;
}

div {
  word-wrap: break-word;  
}
 
.invalid {
  border: solid !important;
  border-width: 1px !important;
  border-color: #FF4719 !important; 
}

.glyphicon {
  top: 0;
  width: 1% !important;
}

.input-group {
  margin-bottom: .5em;
}

.inner-scrollbar {
  overflow-y: auto; 
  width: 98%; 
  height: 200px;
}

.footer-container {
  height: 50px;
}

